# DontNeedStability

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  config.toml
doc/: README.md  api.md  architecture.md  configuration.md
src/: app.rs  db.rs  lib.rs  main.rs  server.rs  zone_parser.rs
src/app/: app.rs
src/db/: in_memory.rs  mod.rs  record.rs
src/server/: mod.rs
tests/db/: main.rs
tests/server/: main.rs
