[package]
name = "dont_need_stability"
version = "0.1.0"
edition = "2024"

[dependencies]
trust-dns-proto = "0.22"
rand = "0.8" # Only for testing
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "dont_need_stability"
path = "src/main.rs"
